Assets/index.css
*{
    box-sizing: border-box;
}
body {
    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
    margin: 0;
    display: flex;
    flex-direction: column;
    min-height: 90px;
    justify-content: flex-start;
} 

header {
    background-color: rgb(45, 123, 197);
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding: 10px;
    border-bottom: 1px solid #eee;
}

h1 {
    font-size: 80x;
    font-weight: bold;
}

main {
    display: flex;
    flex-wrap: wrap;
    flex-direction: column;
    justify-content: space-around;
    align-items: center;
}

section {
    flex: 0 auto;
    padding: 10px;
    margin-top: 60px;
    background-color: rgb(255, 255, 255);
    border-radius: 5px;
    background: linear-gradient(to top left, rgb(248, 71, 27), rgb(45, 123, 197));
    opacity: 0.9;
}

section {
    width: fit-content;
    height: fit-content;
    text-align: center;
}

#highScoreList {
    list-style: none;
    padding-left: 0;
    margin-bottom: 10px;
}

a {
    font-size: 25px;
    color: black;
    margin 2px;
    padding: 2px;
    border-style: solid;
    height: 35px;  
    background-color: crimson;;
    border-radius: 1px;
     text-decoration: none;
     border-color: black;

}
a:hover {
    background-color: rgb(180, 180, 180);
    cursor: pointer;
}

button {
    font-size: 25px;
    height: 35px;  
    background-color: crimson;;
    border-radius: 5px;
}
button:hover {
    background-color: rgb(180, 180, 180);
    cursor: pointer;
}

div {
    border: 2px solid ;
    border-radius: 5px;
    padding: 30px;
}






@media screen and (max-width: 980px) {
    header {
      padding: 0 0 10px 0;
      justify-content: center;
      text-align: center;
    }
  
    header h1 {
      width: 100%;
      padding: 5px;
      margin-bottom: 10px;
      font-size: 70px;
    }
  

  }
  /* media screen formatting for smaller screens */
  @media screen and (max-width: 800px) {
    h1 {
        font-size: 50px;
    }
  }

